Fix background not extending to deal with overflow

--- a/static/css/squad_overview.css
+++ b/static/css/squad_overview.css
@@ -57,6 +57,7 @@ body[data-theme="colour1"] {
     height: auto;
     width: auto;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 ul {
